# rust-backend-axum-seaorm-bp

./: .env  Cargo.toml  README.md
api/: Cargo.toml
api/src/: api.rs  context.rs  main.rs  response.rs
api/src/routes/users/: mod.rs
entity/: Cargo.toml
entity/src/: mod.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221213_161316_create_user_table.rs  m20221216_141436_user_table_add_email.rs
src/: main.rs
