[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api"
path = "../api/src/main.rs"


[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }

axum = "0.6.1"
eyre = "0.6.8"
dotenvy = "0.15.6"
sea-orm = { version = "0.10.5", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
serde = { version = "1.0.150", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
